--- a/app.json
+++ b/app.json
@@ -62,7 +62,11 @@
             "newArchEnabled": false
           },
           "android": {
-            "newArchEnabled": false
+            "newArchEnabled": false,
+            "compileSdkVersion": 34,
+            "targetSdkVersion": 34,
+            "buildToolsVersion": "33.0.1",
+            "kotlinVersion": "1.7.10"
           }
         }
       ]
