--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,6 @@
       "module": "commonjs"
     }
   },
-  "include": ["index.js", "App.tsx", "app", "types", "plugins", "app.config.ts"],
+  "include": ["index.js", "App.tsx", "app", "types", "plugins", "app.config.ts", "test/services/csv/csvReader.test.ts", "app/models/helpers/bugDescriptionMapper.test.ts"],
   "exclude": ["node_modules", "test/**/*"]
 }
