--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.0.2",
+    "@reduxjs/toolkit": "^2.2.1",
     "@shopify/flash-list": "1.6.3",
     "apisauce": "3.0.1",
     "date-fns": "^2.30.0",
